--- a/profiles.yml
+++ b/profiles.yml
@@ -4,7 +4,7 @@ bigquery_dbt:
       dataset: demo
       job_execution_timeout_seconds: 1000
       job_retries: 1
-      keyfile: /secrets/cloudrun-dbt
+      keyfile: path
       location: us-east1
       method: service-account
       priority: interactive
